Reimplemented with while loop

--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -136,11 +136,13 @@
     "\n",
     "[GSE37385](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37385) is a SuperSeries containing [GSE37382](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37382) (RNA data) and [GSE37384](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37384) (copy number data).\n",
     "\n",
-    "5's SOFT file is ~18G because it contains 4's copy number data, which is ~18G.\n",
+    "5's SOFT file is ~18GB because it contains 4's copy number data, which is ~18GB.\n",
     "\n",
-    "We do not read the copy number data, so we do not read 5's and 4's SOFT files.\n",
+    "4's SOFT file is also ~18GB.\n",
     "\n",
-    "We read the RNA data from 2's SOFT file."
+    "The copy number data is too large, so we do not read 5 and 4.\n",
+    "\n",
+    "We read only the RNA data from 2's SOFT file."
    ]
   },
   {
