--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,22 +42,22 @@
    "source": [
     "## [Intertumoral Heterogeneity within Medulloblastoma Subgroups](https://www.cell.com/cancer-cell/fulltext/S1535-6108(17)30201-5)\n",
     "\n",
-    "[GSE85218](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85212) is a SuperSeries containing [GSE85212](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85212) (methylation data) and [GSE85217](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85217) (RNA data).\n",
+    "[GSE85218](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85218) is a SuperSeries containing [GSE85212](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85212) (methylation data) and [GSE85217](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85217) (RNA data).\n",
     "\n",
-    "8's SOFT file has information values for both 2 and 7, but sample values for only 7.\n",
-    "We do not read the sample values for 7 from 8.\n",
-    "Instead, we we read it from 7.\n",
-    "Also, we do not read the information values from the SOFT file.\n",
-    "Instead, we read it from the supplementary table 2 of the paper, which has richer information.\n",
-    "However, this table uses blue and red to represent 0 and 1, so we had to manually fix it and save it as mmc2.tsv before being able to read it.\n",
+    "8's SOFT file has the information values for both 2 and 7, but the sample values for only 7.\n",
+    "We do not read the information values from this SOFT file, because we read them from the paper's supplementary table 2, which has richer information for 2 and 7.\n",
+    "(However, this table uses blue and red to represent 0 and 1, so we had to manually fix it and save it as mmc2.tsv before reading it.)\n",
+    "Also, we do not read 7's sample values from this SOFT file because we read them from 7.\n",
+    "Overall, we do not read from 8.\n",
     "\n",
-    "2's SOFT file has information values, but is missing the methylation sample values, which are in the supplementary file.\n",
-    "So we read the methylation sample values from the supplementary file.\n",
+    "2's SOFT file has the information values, but is missing the sample values, which are in its supplementary file.\n",
+    "So we read 2's sample values from its supplementary file.\n",
     "\n",
-    "7's SOFT file has information values and the RNA sample values.\n",
-    "7 also has a supplementary file containing the RNA sample values.\n",
-    "The RNA sample values from the SOFT file have different sample names than the methylation sample values, but those from the supplementary file have the same names as the methylation sample values.\n",
-    "So, for consistency and for matching sample names, we read the RNA sample values from the supplementary file."
+    "7's SOFT file has the information values and the sample values.\n",
+    "But these sample values have different sample names from the 2's sample values.\n",
+    "7 also has a supplementary file with the sample values.\n",
+    "And these sample values have the same sample names with the 2's sample values.\n",
+    "For consistency and for matching the sample names, we read 7's sample values from its supplementary file."
    ]
   },
   {
@@ -136,13 +136,11 @@
     "\n",
     "[GSE37385](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37385) is a SuperSeries containing [GSE37382](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37382) (RNA data) and [GSE37384](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37384) (copy number data).\n",
     "\n",
-    "5's SOFT file is ~18GB because it contains 4's copy number data, which is ~18GB.\n",
+    "5's SOFT file is 18GB because it contains 4, which is also 18GB.\n",
     "\n",
-    "4's SOFT file is also ~18GB.\n",
+    "Because of 4's large size, we do not read 4 and 5.\n",
     "\n",
-    "The copy number data is too large, so we do not read 5 and 4.\n",
-    "\n",
-    "We read only the RNA data from 2's SOFT file."
+    "We only read the information values and the sample values from 2's SOFT file."
    ]
   },
   {
@@ -173,9 +171,9 @@
     "\n",
     "[GSE93646](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE93646) has methylation data.\n",
     "\n",
-    "Its SOFT file has only information values and not methylation values, which is in its supplementary file. \n",
+    "Its SOFT file has only the information values but not the sample values, which are in its supplementary file. \n",
     "\n",
-    "We read methylation values from the supplementary file."
+    "So we read the information values from its SOFT file and the sample values from its supplementary file."
    ]
   },
   {
@@ -231,7 +229,9 @@
    "source": [
     "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)\n",
     "\n",
-    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437)"
+    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437) has copy number data from 4 platforms.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
    ]
   },
   {
