--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "information_x_sample = pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0,).T\n",
+    "information_x_sample = kraft.tidy(pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0,).T)\n",
     "\n",
     "information_x_sample.index.name = \"Information\"\n",
     "\n",
@@ -149,7 +149,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gse_id = \"GSE37385\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "information_x_samples, rna_gene_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gse_id = \"GSE37382\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "information_x_samples, rna_gene_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE37384\""
    ]
   },
   {
