--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -191,7 +191,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)\n",
+    "\n",
+    "# TODO: remove \"genomic DNA from medulloblastoma_\" prefix"
    ]
   },
   {
@@ -229,7 +231,7 @@
    "source": [
     "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)\n",
     "\n",
-    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437) has copy number data from 4 platforms.\n",
+    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437) has SNP data from 4 platforms.\n",
     "\n",
     "We read the information values and the sample values from its SOFT file."
    ]
@@ -241,6 +243,243 @@
    "outputs": [],
    "source": [
     "gse_id = \"GSE14437\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Decoding the regulatory landscape of medulloblastoma using DNA methylation sequencing](https://www.nature.com/articles/nature13268)\n",
+    "\n",
+    "[GSE54880](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE54880) has methylation data.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE54880\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Synergism between Hedgehog-GLI and EGFR Signaling in Hedgehog-Responsive Human Medulloblastoma Cells Induces Downregulation of Canonical Hedgehog-Target Genes and Stabilized Expression of GLI1](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0065403)\n",
+    "\n",
+    "[GSE46045](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE46045) has methylation data.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE46045\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Unpublished](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE131482)\n",
+    "\n",
+    "[GSE131482](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE131482) has methylation data.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE131482\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Frequent Amplification of a chr19q13.41 MicroRNA Polycistron in Aggressive Primitive Neuroectodermal Brain Tumors](https://www.cell.com/cancer-cell/fulltext/S1535-6108(09)00388-2)\n",
+    "\n",
+    "[GSE14087](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14087) has SNP data.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE14087\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Medulloblastoma Comprises Four Distinct Molecular Variants ](https://ascopubs.org/doi/full/10.1200/JCO.2009.27.4324?url_ver=Z39.88-2003&rfr_id=ori%3Arid%3Acrossref.org&rfr_dat=cr_pub%3Dpubmed&)\n",
+    "\n",
+    "[GSE21140](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE21140) has RNA data.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE21140\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Humanized Stem Cell Models of Pediatric Medulloblastoma Reveal an Oct4/mTOR Axis that Promotes Malignancy](https://www.cell.com/cell-stem-cell/fulltext/S1934-5909(19)30426-6?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1934590919304266%3Fshowall%3Dtrue)\n",
+    "\n",
+    "[GSE106728](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE106728) is a SuperSeries containing [GSE106725](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85215) (SNP data) and [GSE85217](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85217) (RNA data)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE106728\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE106725\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE106727\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Unpublished](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE75153)\n",
+    "\n",
+    "[GSE75153](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE75153) has methylation data.\n",
+    "\n",
+    "We read the information values and the sample values from its SOFT file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE75153\""
    ]
   },
   {
