--- a/code/medulloblastoma.ipynb
+++ b/code/medulloblastoma.ipynb
@@ -20,9 +20,7 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import get_geo\n",
-    "import kraft\n",
-    "import name_biology"
+    "import kraft"
    ]
   },
   {
@@ -31,7 +29,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory_path = os.path.expanduser(\"~/Downloads\")\n",
+    "SETTING = kraft.json.read(\"setting.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "directory_path = SETTING[\"data_directory_path\"]\n",
     "\n",
     "overwrite = False"
    ]
