--- a/code/01.ipynb
+++ b/code/01.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ch3_gene_x_sample = pd.read_csv(\n",
+    "cg_x_sample = pd.read_csv(\n",
     "    kraft.internet.download(\n",
     "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
     "        data_directory_path,\n",
@@ -93,19 +93,9 @@
     "    sep=\"\\t\",\n",
     ")\n",
     "\n",
-    "ch3_gene_x_sample.index = (label for label in ch3_gene_x_sample.index.to_numpy())\n",
+    "cg_gene_x_sample = kraft.feature_x_sample.group_cg(cg_x_sample)\n",
     "\n",
-    "ch3_gene_x_sample = ch3_gene_x_sample.loc[~ch3_gene_x_sample.index.isna()]\n",
-    "\n",
-    "print(ch3_gene_x_sample.shape)\n",
-    "\n",
-    "ch3_gene_x_sample = ch3_gene_x_sample.groupby(level=0).median()\n",
-    "\n",
-    "print(ch3_gene_x_sample.shape)\n",
-    "\n",
-    "ch3_gene_x_sample.index.name = \"Gene\"\n",
-    "\n",
-    "ch3_gene_x_sample"
+    "cg_gene_x_sample"
    ]
   },
   {
@@ -124,17 +114,17 @@
     "    index_col=0,\n",
     ").iloc[:, 4:]\n",
     "\n",
-    "rna_gene_x_sample.index = (label for label in rna_gene_x_sample.index.to_numpy())\n",
-    "\n",
-    "rna_gene_x_sample = rna_gene_x_sample.loc[~rna_gene_x_sample.index.isna()]\n",
-    "\n",
-    "print(rna_gene_x_sample.shape)\n",
-    "\n",
-    "rna_gene_x_sample = rna_gene_x_sample.groupby(level=0).median()\n",
-    "\n",
-    "print(rna_gene_x_sample.shape)\n",
+    "rna_gene_x_sample.index = kraft.name_biology.name_genes(\n",
+    "    (ensg_at[:-3] for ensg_at in rna_gene_x_sample.index.to_numpy())\n",
+    ")\n",
     "\n",
     "rna_gene_x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "print(rna_gene_x_sample.shape)\n",
+    "\n",
+    "rna_gene_x_sample = rna_gene_x_sample.loc[~rna_gene_x_sample.index.isna(), :]\n",
+    "\n",
+    "print(rna_gene_x_sample.shape)\n",
     "\n",
     "rna_gene_x_sample"
    ]
