--- a/code/03.ipynb
+++ b/code/03.ipynb
@@ -69,9 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)\n",
-    "\n",
-    "# TODO: remove \"genomic DNA from medulloblastoma_\" prefix"
+    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
    ]
   },
   {
@@ -80,7 +78,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ch3_gene_x_sample = pd.read_csv(\n",
+    "feature_x_sample = _x_samples[0]\n",
+    "\n",
+    "n = len(\"genomic DNA from medulloblastoma_\")\n",
+    "\n",
+    "feature_x_sample.columns = (label[n:] for label in feature_x_sample.columns)\n",
+    "\n",
+    "feature_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cg_x_sample = pd.read_csv(\n",
     "    kraft.internet.download(\n",
     "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_processed_data.txt.gz\",\n",
     "        data_directory_path,\n",
@@ -90,19 +103,9 @@
     "    index_col=1,\n",
     ").iloc[:, 1::2]\n",
     "\n",
-    "ch3_gene_x_sample.index = (label for label in ch3_gene_x_sample.index.to_numpy())\n",
+    "cg_gene_x_sample = kraft.feature_x_sample.group_cg(cg_x_sample)\n",
     "\n",
-    "ch3_gene_x_sample = ch3_gene_x_sample.loc[~ch3_gene_x_sample.index.isna()]\n",
-    "\n",
-    "print(ch3_gene_x_sample.shape)\n",
-    "\n",
-    "ch3_gene_x_sample = ch3_gene_x_sample.groupby(level=0).median()\n",
-    "\n",
-    "print(ch3_gene_x_sample.shape)\n",
-    "\n",
-    "ch3_gene_x_sample.index.name = \"Gene\"\n",
-    "\n",
-    "ch3_gene_x_sample"
+    "cg_gene_x_sample"
    ]
   }
  ],
